@@ -1,6 +1,8 @@
 package ru.botgame.botexecutor;
 
 import java.io.*;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
 
 /**
  * Created by SBT-Khalimov-RR on 20.04.2016.
@@ -17,15 +19,21 @@ class Bot {
     }
 
     public void init() throws IOException, GameOverException {
-        process = Runtime.getRuntime().exec("cmd /c \"" + botLocation + File.separator + "run.bat\"");
+
+
+        ProcessBuilder builder = new ProcessBuilder("cmd","/c ","\"" + botLocation + File.separator + "run.bat\"");
+//        process = Runtime.getRuntime().exec("cmd /c \"" + botLocation + File.separator + "run.bat\"");
+        builder.redirectErrorStream(true);
+        process = builder.start();
+
 
         if (process == null)
             throw new GameOverException(GameResult.WIN, null);
         if (!process.isAlive())
             throw new GameOverException(GameResult.WIN, null);
 
-        reader = new BufferedReader(new InputStreamReader(process.getInputStream()), 1024);
-        writer = new BufferedWriter(new OutputStreamWriter(process.getOutputStream()), 1024);
+        reader = new BufferedReader(new InputStreamReader(process.getInputStream()));
+        writer = new BufferedWriter(new OutputStreamWriter(process.getOutputStream()));
     }
 
     public BufferedReader getReader() {
@@ -35,6 +43,8 @@ class Bot {
     public BufferedWriter getWriter() { return writer; }
 
     public String getBotLocation() { return botLocation; }
+
+
 
     public void kill() {
         process.destroyForcibly();
